src/Styles/settings.css
/* ... */
/* fade overflow */
.note-toolbar-setting-tbar-preview-fade {
    &::after {
        content: '';
        position: absolute;
        right: 0;
        top: 0;
        bottom: 0;
        width: 33%;
        background: linear-gradient(to right, transparent, var(--setting-items-background));
        pointer-events: none;
    }
}

.note-toolbar-setting-item-fields {
    display: flex;
    flex-grow: 1;
    flex-wrap: wrap;
    gap: 0.5em 1em;
    padding-bottom: 0.25em;
}

.note-toolbar-setting-item-suggester-dialog {
    width: calc(var(--dialog-width) / 1.5);
    & .suggestion-empty {
        padding: var(--size-4-4);
    }
    & .note-toolbar-item-suggestion {
        & .note-toolbar-item-suggester-name, svg.svg-icon {
            color: var(--cg-nt-quick-tools-item-text-color);
        }
        & .note-toolbar-item-suggester-name {
            font-size: var(--cg-nt-quick-tools-item-font-size);
        }
        & .note-toolbar-item-suggestion-container svg.svg-icon {
            height: var(--cg-nt-quick-tools-icon-size);
            width: var(--cg-nt-quick-tools-icon-size);
        }
        &.is-selected {
            background-color: var(--cg-nt-quick-tools-item-bg-color-hover);
            border-radius: var(--cg-nt-quick-tools-item-border-radius);
            & .note-toolbar-item-suggester-name, svg.svg-icon {
                color: var(--cg-nt-quick-tools-item-text-color-hover);
            }
        }
    }
    & .note-toolbar-setting-plugin-onboarding {
        margin: var(--size-4-3);
        margin-bottom: 0;
    }
}

.is-phone .note-toolbar-setting-dialog-phonefix {
    padding: var(--size-4-4);
}

.note-toolbar-setting-mini-dialog {
    width: calc(var(--dialog-width) / 1.5);
    .is-phone & {
        width: inherit;
    }
}

.note-toolbar-setting-small-heading {
    color: var(--color-base-50);
    font-size: var(--font-ui-smaller);
    font-variant: small-caps;
    line-height: 1em;
    margin-block-end: 0.5em;
}

.note-toolbar-setting-spacer {
    margin-block-start: 2em;    
}

.note-toolbar-setting-import-confirm-preview-container {
    align-items: flex-start;
    flex-direction: column;
}

.note-toolbar-setting-import-confirm-preview {
    border: 1px solid var(--background-modifier-border);
    border-radius: 8px;
    padding: 0em 1em 1em 1em;
    & .note-toolbar-setting-tbar-preview {
        & svg {
            height: var(--font-ui-medium);
            width: var(--font-ui-medium);            
        }
    }
}

.note-toolbar-setting-import-text-area {
    border-top: none;
    .setting-item-info {
        display: none;
    }
    textarea {
        flex: 1 1 auto;
        min-height: 16em;
    }
}

.note-toolbar-setting-confirm-dialog {
    & ul {
        padding-bottom: 1em;
        padding-inline-start: 1em;
    }
}

.note-toolbar-setting-confirm-dialog-buttons {
    gap: 0 0.5em;
    display: flex;
    justify-content: flex-end;
}

.note-toolbar-setting-confirm-dialog-note {
    font-size: var(--font-ui-small);
}

.note-toolbar-setting-modal-container {
    & .setting-item-heading {
        padding-left: 0;
        padding-right: 0;
    }
    & .modal-close-button {
        z-index: 2; /* fix for modal title overlapping close button */
    }
    .is-mobile & {
        & .setting-group {
            border-radius: var(--radius-m);
            border: var(--border-width) solid var(--background-modifier-border);
            & .setting-items {
                border-radius: var(--radius-m);
            }
        }
    }
    &.note-toolbar-copy-text-dialog, &.note-toolbar-share-dialog {
        & .setting-item:first-of-type {
            align-items: flex-start;
            border-top: none;
            flex-direction: column;
            & .setting-item-control {
                width: 100%;
                & textarea {
                    height: 5rem;
                    width: 100%;
                }
            }
        }
    }
}

.is-phone {
    & .note-toolbar-setting-modal-phone-top-inset-fix {
        /* fix/workaround for Obsidian v1.5.11 bug: tall modals opened from settings have an inaccessible close button */
        top: var(--safe-area-inset-top);
    }
    & .note-toolbar-setting-modal-phone-bottom-inset-fix {
        padding-bottom: var(--safe-area-inset-bottom);
    }
}

